Few fixes on mobile devices

--- a/papers/static/style/mobile.css
+++ b/papers/static/style/mobile.css
@@ -17,6 +17,7 @@
   margin: 0;
 }
 .oaPanel.left, .oaPanel.right, .siteSummary.left, .siteSummary.right { width: 100%; margin: 0 0 20px 0; }
+.oaPanel.left > h2, .oaPanel.right > h2 { margin-bottom: 10px; }
 
 .flex { flex-direction: column; }
 #sidebar { width: 100%; }
